[package]
name = "efficient_edge_recording"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "haploid_wright_fisher_buffered"
path = "src/haploid_wright_fisher_buffered/main.rs"

[[bin]]
name = "haploid_wright_fisher_buffered_regular_transfer"
path = "src/haploid_wright_fisher_buffered_regular_transfer/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
rand = "0.8.5"
tskit = "0.14.1"
